add handler for conf changes

--- a/tasks/setup-RedHat.yml
+++ b/tasks/setup-RedHat.yml
@@ -13,7 +13,7 @@
     group=root
     mode=0644
     backup=yes
-#  notify: svc restart ntp
+  notify: svc restart ntp
 
 - name: enable, start
   service:
